Fixing various issues related to Dark mode.

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -1805,6 +1805,10 @@ select {
   display:grid
 }
 
+.contents {
+  display:contents
+}
+
 .hidden {
   display:none
 }
@@ -3097,6 +3101,10 @@ select {
 
 .ring-black\/5 {
   --tw-ring-color:rgb(0 0 0 / 0.05)
+}
+
+.filter {
+  filter:var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)
 }
 
 .backdrop-blur {
@@ -4955,6 +4963,21 @@ pre {
   color:rgb(255 255 255 / var(--tw-text-opacity, 1))
 }
 
+.hover\:text-gray-700:hover {
+  --tw-text-opacity:1;
+  color:rgb(55 65 81 / var(--tw-text-opacity, 1))
+}
+
+.hover\:text-gray-300:hover {
+  --tw-text-opacity:1;
+  color:rgb(209 213 219 / var(--tw-text-opacity, 1))
+}
+
+.hover\:text-gray-400:hover {
+  --tw-text-opacity:1;
+  color:rgb(156 163 175 / var(--tw-text-opacity, 1))
+}
+
 .hover\:underline:hover {
   text-decoration-line:underline
 }
@@ -5078,6 +5101,10 @@ pre {
   }
 }
 
+.dark\:block:is(.dark *) {
+  display:block
+}
+
 .dark\:flex:is(.dark *) {
   display:flex
 }
@@ -5159,6 +5186,11 @@ pre {
   background-color:rgba(var(--color-primary-900), var(--tw-bg-opacity, 1))
 }
 
+.dark\:bg-gray-900:is(.dark *) {
+  --tw-bg-opacity:1;
+  background-color:rgb(17 24 39 / var(--tw-bg-opacity, 1))
+}
+
 .dark\:from-neutral-800:is(.dark *) {
   --tw-gradient-from:rgba(var(--color-neutral-800), 1) var(--tw-gradient-from-position);
   --tw-gradient-to:rgba(var(--color-neutral-800), 0) var(--tw-gradient-to-position);
@@ -5229,6 +5261,11 @@ pre {
   color:rgba(var(--color-primary-400), var(--tw-text-opacity, 1))
 }
 
+.dark\:text-white:is(.dark *) {
+  --tw-text-opacity:1;
+  color:rgb(255 255 255 / var(--tw-text-opacity, 1))
+}
+
 .dark\:opacity-60:is(.dark *) {
   opacity:0.6
 }
@@ -5274,6 +5311,21 @@ pre {
 .dark\:hover\:text-tertiary-400:hover:is(.dark *) {
   --tw-text-opacity:1;
   color:rgba(var(--color-tertiary-400), var(--tw-text-opacity, 1))
+}
+
+.dark\:hover\:text-gray-300:hover:is(.dark *) {
+  --tw-text-opacity:1;
+  color:rgb(209 213 219 / var(--tw-text-opacity, 1))
+}
+
+.dark\:hover\:text-black:hover:is(.dark *) {
+  --tw-text-opacity:1;
+  color:rgb(0 0 0 / var(--tw-text-opacity, 1))
+}
+
+.dark\:hover\:text-gray-700:hover:is(.dark *) {
+  --tw-text-opacity:1;
+  color:rgb(55 65 81 / var(--tw-text-opacity, 1))
 }
 
 .dark\:focus\:bg-primary-900:focus:is(.dark *) {
